--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -151,172 +151,6 @@ The full oracle evaluation on these sliCQT parameters are shown in the boxplot i
 
 The slice length and transition length for the 262-bin Bark scale sliCQT with frequency limits of 32.9--22,050 Hz are automatically chosen to be 18,060 and 4,514 samples respectively, using the automatic slice length picker described in section \ref{sec:freqscales}.
 
-The input data to xumx-sliCQ was split into to sequences of a one second duration. The slice length, 18,060 samples, results in a transform consisting of nine slices for one second of audio. Each slice consists of a number of time coefficients that varies with the frequency bin. The ragged transform contains 70 buckets of frequency bins grouped by their time resolution. Tables \ref{table:slicqdim1} and \ref{table:slicqdim2} show each bucket in the ragged transform with its original 3D shape ($\text{slice} \times \text{frequency} \times \text{time}$).
-
-\begin{table}[ht]
-	\centering
-	\caption{Dimensions of the forward ragged sliCQT, first 35 time buckets}
-	\label{table:slicqdim1}
-	\begin{tabular}{ |l|l|l|l|l| }
-	 \hline
-		Bucket & Frequency bins & Frequencies (Hz) &  3D shape \\
-	 \hline
-	 \hline
-0 & 0 & (9, \ 1, \ 28) \\
-\hline
-1 & 1--86 & (9, \ 86, \ 16) \\
-\hline
-2 & 87--100 & (9, \ 14, \ 20) \\
-\hline
-3 & 101--111 & (9, \ 11, \ 24) \\
-\hline
-4 & 112--120 & (9, \ 9, \ 28) \\
-\hline
-5 & 121--128 & (9, \ 8, \ 32) \\
-\hline
-6 & 129--135 & (9, \ 7, \ 36) \\
-\hline
-7 & 136--141 & (9, \ 6, \ 40) & (6, \ 140) & (6, \ 240) \\
-\hline
-8 & 142--147 & (9, \ 6, \ 44) & (6, \ 154) & (6, \ 264) \\
-\hline
-9 & 148--152 & (9, \ 5, \ 48) & (5, \ 168) & (5, \ 288) \\
-\hline
-10 & 153--157 & (9, \ 5, \ 52) & (5, \ 182) & (5, \ 312) \\
-\hline
-11 & 158--161 & (9, \ 4, \ 56) & (4, \ 196) & (4, \ 336) \\
-\hline
-12 & 162--166 & (9, \ 5, \ 60) & (5, \ 210) & (5, \ 360) \\
-\hline
-13 & 167--169 & (9, \ 3, \ 64) & (3, \ 224) & (3, \ 384) \\
-\hline
-14 & 170--173 & (9, \ 4, \ 68) & (4, \ 238) & (4, \ 408) \\
-\hline
-15 & 174--177 & (9, \ 4, \ 72) & (4, \ 252) & (4, \ 432) \\
-\hline
-16 & 178--180 & (9, \ 3, \ 76) & (3, \ 266) & (3, \ 456) \\
-\hline
-17 & 181--183 & (9, \ 3, \ 80) & (3, \ 280) & (3, \ 480) \\
-\hline
-18 & 184--186 & (9, \ 3, \ 84) & (3, \ 294) & (3, \ 504) \\
-\hline
-19 & 187--189 & (9, \ 3, \ 88) & (3, \ 308) & (3, \ 528) \\
-\hline
-20 & 190--191 & (9, \ 2, \ 92) & (2, \ 322) & (2, \ 552) \\
-\hline
-21 & 192--194 & (9, \ 3, \ 96) & (3, \ 336) & (3, \ 576) \\
-\hline
-22 & 195--196 & (9, \ 2, \ 100) & (2, \ 350) & (2, \ 600) \\
-\hline
-23 & 197--199 & (9, \ 3, \ 104) & (3, \ 364) & (3, \ 624) \\
-\hline
-24 & 200--201 & (9, \ 2, \ 108) & (2, \ 378) & (2, \ 648) \\
-\hline
-25 & 202--203 & (9, \ 2, \ 112) & (2, \ 392) & (2, \ 672) \\
-\hline
-26 & 204--205 & (9, \ 2, \ 116) & (2, \ 406) & (2, \ 696) \\
-\hline
-27 & 206--207 & (9, \ 2, \ 120) & (2, \ 420) & (2, \ 720) \\
-\hline
-28 & 208--209 & (9, \ 2, \ 124) & (2, \ 434) & (2, \ 744) \\
-\hline
-29 & 210--211 & (9, \ 2, \ 128) & (2, \ 448) & (2, \ 768) \\
-\hline
-30 & 212--213 & (9, \ 2, \ 132) & (2, \ 462) & (2, \ 792) \\
-\hline
-31 & 214--215 & (9, \ 2, \ 136) & (2, \ 476) & (2, \ 816) \\
-\hline
-32 & 216--217 & (9, \ 2, \ 140) & (2, \ 490) & (2, \ 840) \\
-\hline
-33 & 218 & (9, \ 1, \ 144) & (1, \ 504) & (1, \ 864) \\
-\hline
-34 & 219--220 & (9, \ 2, \ 148) & (2, \ 518) & (2, \ 888) \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}[ht]
-	\centering
-	\caption{Dimensions of the forward ragged sliCQT, last 35 time buckets}
-	\label{table:slicqdim2}
-	\begin{tabular}{ |l|l|l|l|l| }
-	 \hline
-		Bucket & Frequency bins & 3D shape & 2D overlap-add shape & 2D flat shape \\
-	 \hline
-	 \hline
-35 & 221--222 & (9, \ 2, \ 152) & (2, \ 532) & (2, \ 912) \\
-\hline
-36 & 223 & (9, \ 1, \ 156) & (1, \ 546) & (1, \ 936) \\
-\hline
-37 & 224--225 & (9, \ 2, \ 160) & (2, \ 560) & (2, \ 960) \\
-\hline
-38 & 226 & (9, \ 1, \ 164) & (1, \ 574) & (1, \ 984) \\
-\hline
-39 & 227--228 & (9, \ 2, \ 168) & (2, \ 588) & (2, \ 1,008) \\
-\hline
-40 & 229 & (9, \ 1, \ 172) & (1, \ 602) & (1, \ 1,032) \\
-\hline
-41 & 230--231 & (9, \ 2, \ 176) & (2, \ 616) & (2, \ 1,056) \\
-\hline
-42 & 232 & (9, \ 1, \ 180) & (1, \ 630) & (1, \ 1,080) \\
-\hline
-43 & 233 & (9, \ 1, \ 184) & (1, \ 644) & (1, \ 1,104) \\
-\hline
-44 & 234--235 & (9, \ 2, \ 188) & (2, \ 658) & (2, \ 1,128) \\
-\hline
-45 & 236 & (9, \ 1, \ 192) & (1, \ 672) & (1, \ 1,152) \\
-\hline
-46 & 237 & (9, \ 1, \ 196) & (1, \ 686) & (1, \ 1,176) \\
-\hline
-47 & 238 & (9, \ 1, \ 200) & (1, \ 700) & (1, \ 1,200) \\
-\hline
-48 & 239--240 & (9, \ 2, \ 204) & (2, \ 714) & (2, \ 1,224) \\
-\hline
-49 & 241 & (9, \ 1, \ 208) & (1, \ 728) & (1, \ 1,248) \\
-\hline
-50 & 242 & (9, \ 1, \ 212) & (1, \ 742) & (1, \ 1,272) \\
-\hline
-51 & 243 & (9, \ 1, \ 216) & (1, \ 756) & (1, \ 1,296) \\
-\hline
-52 & 244 & (9, \ 1, \ 220) & (1, \ 770) & (1, \ 1,320) \\
-\hline
-53 & 245 & (9, \ 1, \ 224) & (1, \ 784) & (1, \ 1,344) \\
-\hline
-54 & 246 & (9, \ 1, \ 228) & (1, \ 798) & (1, \ 1,368) \\
-\hline
-55 & 247--248 & (9, \ 2, \ 232) & (2, \ 812) & (2, \ 1,392) \\
-\hline
-56 & 249 & (9, \ 1, \ 236) & (1, \ 826) & (1, \ 1,416) \\
-\hline
-57 & 250 & (9, \ 1, \ 240) & (1, \ 840) & (1, \ 1,440) \\
-\hline
-58 & 251 & (9, \ 1, \ 244) & (1, \ 854) & (1, \ 1,464) \\
-\hline
-59 & 252 & (9, \ 1, \ 248) & (1, \ 868) & (1, \ 1,488) \\
-\hline
-60 & 253 & (9, \ 1, \ 252) & (1, \ 882) & (1, \ 1,512) \\
-\hline
-61 & 254 & (9, \ 1, \ 256) & (1, \ 896) & (1, \ 1,536) \\
-\hline
-62 & 255 & (9, \ 1, \ 264) & (1, \ 924) & (1, \ 1,584) \\
-\hline
-63 & 256 & (9, \ 1, \ 268) & (1, \ 938) & (1, \ 1,608) \\
-\hline
-64 & 257 & (9, \ 1, \ 272) & (1, \ 952) & (1, \ 1,632) \\
-\hline
-65 & 258 & (9, \ 1, \ 276) & (1, \ 966) & (1, \ 1,656) \\
-\hline
-66 & 259 & (9, \ 1, \ 280) & (1, \ 980) & (1, \ 1,680) \\
-\hline
-67 & 260 & (9, \ 1, \ 284) & (1, \ 994) & (1, \ 1,704) \\
-\hline
-68 & 261 & (9, \ 1, \ 288) & (1, \ 1,008) & (1, \ 1,728) \\
-\hline
-69 & 262 & (9, \ 1, \ 292) & (1, \ 1,022) & (1, \ 1,752) \\
-\hline
-\end{tabular}
-\end{table}
-
 \newpagefill
 
 \subsection{xumx-sliCQ neural network}
@@ -340,7 +174,7 @@ Recall from section \ref{sec:xumxinc} that X-UMX includes the cross-domain loss 
 \subsubsection{Music demixing results}
 \label{sec:demixresults}
 
-The BSSv4 scores for the demixing results generated from the evaluation script\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/trained_models.py}} were computed on the test set of the MUSDB18-HQ dataset, and are shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of every model evaluated in the boxplot with their label, and the median SDR across the four targets and 50 test tracks. ``-WEM'' denotes ``Wiener-expectation-maximization,'' the post-processing iterative refinement step of the four targets.
+The BSSv4 scores for the demixing results generated from the evaluation script\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/trained_models.py}} were computed on the test set of the MUSDB18-HQ dataset, and are shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of every model evaluated in the boxplot with their label, and the median SDR across the four targets and 50 test tracks. ``-WEM'' denotes ``Wiener expectation-maximization,'' the post-processing iterative refinement step of the four targets.
 
 \begin{table}[ht]
 	\centering
@@ -445,7 +279,7 @@ The pretrained xumx-sliCQ model\footnote{\url{https://github.com/sevagh/xumx-sli
 
 To report the inference performance, only the CPU was used. The CPU is a more universal device for performing inference, as almost every computing device (desktop, laptop, server, smartphone, etc.) has a CPU while not all have deep-learning capable GPUs \parencite{deepcpuinf, deepcpuinf2}. The time to perform the separation of a mixed song into four stems (including the Wiener-EM step) was averaged across the first 10 songs of the 50-song test set of MUSDB18-HQ. The music demixing result generation script from the previous section \ref{sec:demixresults} was simply adapted to add timing measurements. Note that X-UMX was omitted from the comparison, since it runs on NNabla, a different deep learning framework than PyTorch.
 
-Table \ref{table:infperf} shows the measured times. For xumx-sliCQ, both the sliCQT-Wiener-EM and STFT-Wiener-EM post-processing steps were measured.
+Table \ref{table:infperf} shows the measured times. For xumx-sliCQ, both the STFT and sliCQT configurations of the post-processing Wiener-EM step were measured, denoted as STFT-WEM and sliCQT-WEM respectively.
 
 \begin{table}[ht]
 	\centering
@@ -465,6 +299,6 @@ Table \ref{table:infperf} shows the measured times. For xumx-sliCQ, both the sli
 \end{tabular}
 \end{table}
 
-xumx-sliCQ is slower in its inference performance than UMX. Overall, xumx-sliCQ is smaller on disk, which is an advantage over UMX, but it executes \textasciitilde2x slower than UMX with the STFT-Wiener-EM step while producing lower BSS metrics in the music demixing task. xumx-sliCQ with the sliCQT-Wiener-EM step is \textasciitilde2x slower than with the STFT-Wiener-EM step for a small \textasciitilde0.1 dB boost in the median SDR score.
+The STFT-WEM configuration of xumx-sliCQ runs \textasciitilde2x slower than UMX, and the sliCQT-WEM configuration runs \textasciitilde4x slower than UMX. We note that the sliCQT-WEM configuration only adds \textasciitilde0.1 dB to the median SDR score compared to the STFT-WEM variant, which is a poor tradeoff considering it doubles the running time.
 
 \end{document}
