--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -448,7 +448,7 @@ The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ 
 
 \newpagefill
 
-\subsubsection{Replacing the STFT with the sliCQT}
+\subsubsection{Replacing the STFT with the sliCQT in the neural network}
 \label{sec:replacestft}
 
 \todo[inline]{in section 2 whatever, we described umx}
@@ -510,6 +510,9 @@ Within each sub-network, or \Verb#OpenUnmixTimeBucket#, the implementation is si
   \caption{Single network for one time bucket from the ragged sliCQT}
   \label{code:raggedumxoneblock}
 \end{listing}
+
+\subsubsection{Replacing the STFT with the sliCQT in post-processing}
+\label{sec:replacestftwiener}
 
 After the \Verb#OpenUnmix# class outputs the estimates of the magnitude sliCQT for all four targets, the post-processing Wiener expectation-maximization (EM) step needs to be applied. The code for the Wiener-EM step is essentially unchanged from the original, since both the sliCQT and STFT output complex Fourier coefficients.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/filtering.py\#L290}} The inputs to the Wiener-EM function are the mixed complex spectrogram and a rectangular matrix containing the four target magnitude spectrograms.
 
